syntax = "proto3";

option csharp_namespace = "kafka";
package headers;

message RequestHeader
{
	//8-4-4-4-12
	string MessageGuid = 1;
	int32 Bucket = 2;
	repeated Topic TopicsForAnswer = 3;
}

message ResponseHeader
{
	//8-4-4-4-12
	string AnswerToMessageGuid = 1;
	int32 Bucket = 2;

	//Service Name
	string AnswerFrom = 3;
}

message Topic
{
	string Name = 1;
	
	//-1 or emty array - Any
	repeated int32 Partitions = 2;

	//Determines whether the current handler(Service) (if its name is the same) should(and can) send to this topic
	repeated string CanAnswerFrom = 3;
}